code jump in tutorial is fixed

--- a/styles/style-full-page.css
+++ b/styles/style-full-page.css
@@ -158,6 +158,7 @@ nav a:focus {
 
 .article-recent-main {
   order: 2;
+  margin-top: -3em;
 }
 
 .article-recent-secondary {
@@ -168,7 +169,7 @@ nav a:focus {
 
 @media (min-width: 600px) {
   .article-recent-main {
-    margin-top: -3em;
+    margin-top: 0;
   }
   .article-info {
     text-align: right;
@@ -176,6 +177,20 @@ nav a:focus {
 }
 
 @media (min-width: 675px) {
+  .article-recent {
+    flex-direction: row;
+    justify-content: space-between;
+    border: 2px solid red;
+  }
+
+  .article-recent-main {
+    width: 68%;
+    border: 2px solid green;
+  }
+  .article-recent-secondary {
+    width: 30%;
+    border: 2px solid yellowgreen;
+  }
   .container-flex {
     flex-direction: row;
   }
@@ -190,7 +205,7 @@ nav a:focus {
 
   .article-image {
     width: 100%;
-    height: 400px;
+    min-height: 250px;
     object-fit: cover;
     /* object-position: left; */
   }
